src/v8.0_regression_check.txt
Traceback (most recent call last):
  File "D:\Drug\src\verify_perturbation.py", line 4, in <module>
    from saeb.experiment.config import SimulationConfig
  File "D:\Drug\src\saeb\__init__.py", line 1, in <module>
    from .experiment.suite import SAEBFlowExperiment
  File "D:\Drug\src\saeb\experiment\suite.py", line 15, in <module>
    from ..utils.pdb_io import RealPDBFeaturizer, save_points_as_pdb
  File "D:\Drug\src\saeb\utils\pdb_io.py", line 192
    if esm_feat.size(-1) < 1280:
    ^
IndentationError: expected an indented block after 'if' statement on line 191
